sample/msvc/error/c2082.cpp
// C2082.cpp
void func(int i) {
   int i;   // C2082
   int ii;   // OK
}
